objects/pse__Forecast_Summary__c.object
<CustomObject>
    <customHelpPage>pse__ForecastCalculationHelp</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>pse__Category_1__c</fullName>
        <label>Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Category_2__c</fullName>
        <label>Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Category_3__c</fullName>
        <label>Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Calculation</label>
        <referenceTo>pse__Forecast_Calculation__c</referenceTo>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Plan</label>
        <referenceTo>pse__Group_Plan__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Summaries</relationshipLabel>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunities_Category_1__c</fullName>
        <label>Opportunities Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunities_Category_2__c</fullName>
        <label>Opportunities Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunities_Category_3__c</fullName>
        <label>Opportunities Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Category_1__c</fullName>
        <label>Override Category 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Category_2__c</fullName>
        <label>Override Category 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_Category_3__c</fullName>
        <label>Override Category 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Override_Category_1__c</fullName>
        <label>Percent Override Category 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Override_Category_2__c</fullName>
        <label>Percent Override Category 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Override_Category_3__c</fullName>
        <label>Percent Override Category 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Plan</label>
        <referenceTo>pse__Practice_Plan__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Summaries</relationshipLabel>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projects_Category_1__c</fullName>
        <label>Projects Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Projects_Category_2__c</fullName>
        <label>Projects Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Projects_Category_3__c</fullName>
        <label>Projects Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Plan</label>
        <referenceTo>pse__Region_Plan__c</referenceTo>
        <relationshipLabel>zDeprecated:Forecast Summaries</relationshipLabel>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipName>Forecast_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Sublevels_Category_1__c</fullName>
        <label>Sublevels Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sublevels_Category_2__c</fullName>
        <label>Sublevels Best Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Sublevels_Category_3__c</fullName>
        <label>Sublevels Worst Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>zDeprecated:Forecast Summary</label>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>Forecast Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zDeprecated:Forecast Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>